--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -1,6 +1,14 @@
 form {
+    width: ' 50%';
+
     input {
         display: block;
         margin-bottom: 10px;
+    }
+    input[type='text'] {
+        width: 100%;
+    }
+    .actions {
+        text-align: right;
     }
 }
